--- a/demo/index.html
+++ b/demo/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="max-w-5xl m-auto px-6 ">
     <div class="navbar">
         <div class="left">
             <h1 class="logo">No Shit.</h1>
