icons and title

--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TailwindCSS test</title>
+    <title>No Shit.</title>
     <style>
         body {
             transition: background-color 0.3s ease;
