bugfixes in responsiveness and darkmode. also added a footer

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="manifest" href="/site.webmanifest">
 </head>
 
-<body class="text-[#121212] bg-[#eeeeee] dark:bg-[#121212] dark:text-white">
+<body class="text-dark bg-light dark:bg-dark dark:text-white">
     <div id="root"
         class="flex sm:flex max-w-[300px] sm:max-w-[600px] md:max-w-[700px] lg:max-w-[980px] xl:max-w-[1200px] mx-auto">
     </div>
